--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,18 @@ header div {
   margin: 0 auto;
   max-width: 1200px;
 }
+
+h2 {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #eee;
+}
+
+.content {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 100px;
+}
