--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,16 @@ h2 {
   border: 0px;
   padding: 0px;
 }
+
+/* Skeleton */
+
+.skeleton {
+  background: #ddd;
+  margin: 10px 0;
+  border-radius: 4px;
+}
+
+.skeleton.text {
+  width: 100%;
+  height: 12px;
+}
