--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,8 @@ h2 {
   margin: 20px auto;
   padding: 10px 15px;
   border-radius: 4px;
+  position: relative;
+  overflow: hidden;
 }
 
 .skeleton-profile {
@@ -98,4 +100,37 @@ h2 {
 
 .skeleton-wrapper.dark .skeleton {
   background: #777;
+}
+
+.shimmer-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  animation: loading 2.5s infinite;
+}
+
+.shimmer {
+  width: 50%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.2);
+  transform: skewX(-20deg);
+  box-shadow: 0 0 30px 30px rgba(255, 255, 255, 0.05);
+}
+
+.dark .shimmer {
+  background: rgba(255, 255, 255, 0.05);
+}
+
+@keyframes loading {
+  0% {
+    transform: translateX(-150%);
+  }
+  50% {
+    transform: translateX(-60%);
+  }
+  100% {
+    transform: translateX(150%);
+  }
 }
